tests/fixtures/qml/reject/function_decl.qml
import QtQuick 2.15

Item {
    width: 100
    height: 100

    function formatAxis(v) {
        return v.toFixed(2)
    }
}
